--- a/src/style.scss
+++ b/src/style.scss
@@ -1,1 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;700&display=swap");
+:root {
+  --mainText: #000000;
+  --mainColor: #8c68a2;
+}
