--- a/src/components/Detail/detail.scss
+++ b/src/components/Detail/detail.scss
@@ -1,25 +1,60 @@
 @import "../../styleutils/mixins.scss";
-select {
-  min-width: 180px;
-  border: 2px solid #d3d3d3;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  background: transparent;
-  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-  background-repeat: no-repeat;
-  background-position-x: 100%;
-  background-position-y: 2px;
-  color: #000;
-  @include fontOswald(400, 0.8rem);
-  padding: 0.2rem 0.8rem;
-  position: relative;
-  .colorCircle {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 15px;
-    height: 15px;
-    background: #000;
-    border-radius: 50%;
+@import "~react-image-gallery/styles/scss/image-gallery.scss";
+.text {
+  justify-content: center;
+  flex-direction: column;
+  h1 {
+    @include fontOswald(700, 2.75rem);
   }
+  p {
+    @include fontSans(400, 1rem);
+    max-width: 450px;
+    color: #000;
+  }
+  #form {
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    .form-field {
+      max-width: 400px;
+      display: flex;
+      flex-direction: row;
+      margin-top: 20px;
+      .heart-container {
+        margin-left: 15px;
+      }
+    }
+  }
+}
+.img-container {
+  display: flex;
+  justify-content: center;
+  img {
+    max-width: 350px;
+  }
+}
+.smallimg-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 50px;
+  .smallimg {
+    margin-right: 35px;
+    img {
+      width: 60px;
+      height: 60px;
+    }
+  }
+}
+
+//slider
+.thumbnail-slider-wrap {
+  margin-top: 15px;
+  height: 85px;
+}
+.thumbnail-slider-wrap .slick-track .slick-slide {
+  text-align: center;
+}
+.thumbnail-slider-wrap .slick-track .slick-slide img {
+  width: 70%;
 }
