--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -27,3 +27,32 @@
     }
   }
 }
+// all of styles from main page
+
+// ----------------------------------------------Banner-----------------------------------------------------//
+.banner {
+  background-color: var(--mainColor);
+  height: 100vh;
+  &--info {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    h1 {
+      @include fontOswald(700, 3.25rem);
+      color: #fff;
+    }
+    p {
+      @include fontSans(400, 1.1rem);
+      color: #fff;
+    }
+  }
+  &--img {
+    display: flex;
+    img {
+      max-width: 350px;
+      margin: 0 auto;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
