--- a/src/ui/style.scss
+++ b/src/ui/style.scss
@@ -19,9 +19,11 @@
     border: 2px solid #d3d3d3;
     position: relative;
     padding: 0.3rem 0.8rem;
-    .color {
-      padding-left: 1.5rem;
+    .text {
       @include fontOswald(400, 0.9rem);
+      &--padding {
+        padding-left: 1.5rem;
+      }
     }
   }
   &--arrow {
