--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1,13 +1,11 @@
 @import "../styleutils/mixins.scss";
+
 .navbar {
   .toggle {
     border-color: transparent !important;
   }
-  .navbar-toggler-icon {
-  }
   #logo {
-    @include fontSans(700, 0.8rem);
-    color: #000;
+    @include fontSans(700, 0.8rem,#000);
     margin-bottom: 0;
   }
   .cart-container {
@@ -21,8 +19,7 @@
       border-radius: 50%;
       background-color: var(--mainColor);
       .count {
-        @include fontSans(400, 0.7rem);
-        color: #fff;
+        @include fontSans(400, 0.7rem,#fff);
       }
     }
   }
@@ -33,17 +30,17 @@
 .banner {
   background-color: var(--mainColor);
   height: 100vh;
+  flex-direction: column;
   &--info {
     display: flex;
     justify-content: center;
     flex-direction: column;
     h1 {
-      @include fontOswald(700, 3.25rem);
-      color: #fff;
+      @include fontOswald(700, 3.25rem,#fff);
     }
     p {
-      @include fontSans(400, 1.1rem);
-      color: #fff;
+      margin: 1.2rem 0;
+      @include fontSans(300, 1.1rem,#fff);
     }
   }
   &--img {
@@ -54,5 +51,63 @@
       width: 100%;
       height: 100%;
     }
+  }
+  // swipper
+  .padding{
+    padding: 1.5rem 3.75rem;
+  }
+  .swiper-button-prev,.swiper-button-next
+  {
+    color:#fff;
+    &:after{
+      transform: rotateZ(90deg);
+      font-size:1.2rem;
+    }
+  }
+  .swiper-button-prev,.swiper-button-next{
+    &:before{
+      @include fontOswald(400,0.8rem,#fff);
+      text-transform: uppercase;
+      transform: rotateZ(-90deg);
+    }
+  }
+  .swiper-button-prev{
+    &:before{
+      content:'prev';
+      position: absolute;
+      top:40px;
+    }
+  }
+  .swiper-button-next{
+    &:before{
+      content:'next';
+      
+    }
+    &:after{
+      position: absolute;
+      top:40px;
+    }
+  }
+  .swiper-container{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  //pagination
+  .swiper-pagination{
+    position: relative;
+  }
+  .swiper-pagination-fraction, .swiper-pagination-custom, .swiper-container-horizontal > .swiper-pagination-bullet{
+    bottom: 35px;
+  }
+  .swiper-pagination-bullet{
+    @include fontOswald(400,0.7rem,#fff);
+    width: 10px;
+    height: 3px;
+    background-color: #fff;
+    border-radius: 0;
+  }
+  .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet{
+    margin:3px 8px;
   }
 }
